// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compontent snapshots max date datefield 1`] = `
<div>
  <div
    class="usa-form-group datefield"
  >
    <label
      class="usa-label"
      for="test-9"
      id="test-9-label"
    >
      test-9
    </label>
    <div
      class="usa-hint"
      id="test-9-hint"
    >
      mm/dd/yyyy
    </div>
    <div
      class="usa-date-picker"
    >
      <div
        class="grid-row"
      >
        <input
          aria-describedby="test-9-hint"
          aria-labelledby="test-9-label"
          class="usa-input margin-0"
          id="test-9"
          name="test-9"
          value=""
        />
        <div
          class="flex-column"
        >
          <button
            aria-label="calendar button"
            class="calendar-button padding-x-1 padding-top-1"
          >
            <svg
              aria-hidden="true"
              aria-label="calendar today icon"
              class="usa-icon--size-3"
              color="black"
              data-testid="calendar-button"
              fill="currentColor"
              role="button"
            >
              <use
                href="[object Object]#calendar_today"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`compontent snapshots min date datefield 1`] = `
<div>
  <div
    class="usa-form-group datefield"
  >
    <label
      class="usa-label"
      for="test-10"
      id="test-10-label"
    >
      test-10
    </label>
    <div
      class="usa-hint"
      id="test-10-hint"
    >
      mm/dd/yyyy
    </div>
    <div
      class="usa-date-picker"
    >
      <div
        class="grid-row"
      >
        <input
          aria-describedby="test-10-hint"
          aria-labelledby="test-10-label"
          class="usa-input margin-0"
          id="test-10"
          name="test-10"
          required=""
          value=""
        />
        <div
          class="flex-column"
        >
          <button
            aria-label="calendar button"
            class="calendar-button padding-x-1 padding-top-1"
          >
            <svg
              aria-hidden="true"
              aria-label="calendar today icon"
              class="usa-icon--size-3"
              color="black"
              data-testid="calendar-button"
              fill="currentColor"
              role="button"
            >
              <use
                href="[object Object]#calendar_today"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`compontent snapshots primary datefield 1`] = `
<div>
  <div
    class="usa-form-group datefield"
  >
    <label
      class="usa-label"
      for="test-8"
      id="test-8-label"
    >
      test-8
    </label>
    <div
      class="usa-hint"
      id="test-8-hint"
    >
      mm/dd/yyyy
    </div>
    <div
      class="usa-date-picker"
    >
      <div
        class="grid-row"
      >
        <input
          aria-describedby="test-8-hint"
          aria-labelledby="test-8-label"
          class="usa-input margin-0"
          id="test-8"
          name="test-8"
          value="05/05/2020"
        />
        <div
          class="flex-column"
        >
          <button
            aria-label="calendar button"
            class="calendar-button padding-x-1 padding-top-1"
          >
            <svg
              aria-hidden="true"
              aria-label="calendar today icon"
              class="usa-icon--size-3"
              color="black"
              data-testid="calendar-button"
              fill="currentColor"
              role="button"
            >
              <use
                href="[object Object]#calendar_today"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
